--- a/SnowmassStyle/Computing/authorlist.tex
+++ b/SnowmassStyle/Computing/authorlist.tex
@@ -4,7 +4,46 @@
 
 \begin{center}
 
-\begin{large} {\bf Conveners: L. A. T. Bauerdick, S. Gottlieb, list of all subgroup conveners, etc} \end{large}
+\begin{large} {Computing Frontier Conveners: L. A. T. Bauerdick (Fermilab), S. Gottlieb (Indiana);
+
+Cosmic Frontier, Astrophysics and Cosmology Sub-Group Conveners:
+Alex Szalay (Johns Hopkins), Salman Habib (Chicago), Anthony Mezzacappa (ORNL); 
+Observers: Andrew Connolly (U Washington), George Fuller (UCSD)
+
+Energy Frontier Sub-Group Conveners: 
+Ian Fisk (Fermilab), Jim Shank (Boston University);
+
+Intensity Frontier Sub-Group Conveners: 
+Brian Rebel (Fermilab), Mayly Sanchez (Iowa State);
+Observer: Stephen Wolbers (Fermilab)
+
+Accelerator Science Sub-Group Conveners: 
+Estelle Cormier (Tech-X), Panagiotis Spentzouris (FNAL); 
+Observer: Chan Joshi (UCLA)
+
+Lattice Field Theory Sub-Group Conveners: 
+Thomas Blum (UConn), Ruth Van de Water (FNAL); 
+Observer Don Holmgren (FNAL);
+
+Perturbative QCD Sub-Group Conveners: 
+Stefan Hoeche (SLAC), Laura Reina (FSU); 
+Observer Markus Wobisch (Louisiana Tech);
+
+Distributed Computing and Facility Infrastructures Sub-Group Conveners: 
+Ken Bloom (U.Nebraska/Lincoln), Sudip Dosanjh (LBL), Richard Gerber (NERSC)
+
+Networking Sub-Group Conveners: 
+Gregory Bell (LBNL), Michael Ernst (BNL);
+
+Software Development, Personnel, Training Sub-Group Conveners: 
+David Brown (LBL), Peter Elmer (Princeton U.);
+Observer: Ruth Pordes (Fermilab);
+
+Data Management and Storage Sub-Group Conveners: 
+Michelle Butler (NCSA) Richard Mount (SLAC); 
+Observer: Mike Hildreth (Notre Dame U.)
+
+} \end{large}
 
  
 
